# bobai

./: README.md  Readme.md  bak_env.ini  pyproject.toml
bobai/: bob.py
db/: mybankdb.sql
tests/: combine.ipynb
